@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: cons.c,v 1.217 2010/10/07 19:58:11 bzfheinz Exp $"
+#pragma ident "@(#) $Id: cons.c,v 1.218 2010/10/29 11:07:00 bzfwinkm Exp $"
 
 /**@file   cons.c
  * @brief  methods for constraints and constraint handlers
@@ -4999,7 +4999,11 @@ SCIP_RETCODE SCIPconsSetSeparated(
 
    if( cons->separate != separate )
    {
-      if( cons->enabled && cons->sepaenabled )
+      if( SCIPsetGetStage(set) == SCIP_STAGE_PROBLEM )
+      {
+         cons->separate = separate;
+      }
+      else if( cons->enabled && cons->sepaenabled )
       {
          if( separate )
          {
@@ -5028,7 +5032,11 @@ SCIP_RETCODE SCIPconsSetEnforced(
 
    if( cons->enforce != enforce )
    {
-      if( cons->enabled )
+      if( SCIPsetGetStage(set) == SCIP_STAGE_PROBLEM )
+      {
+         cons->enforce = enforce;
+      }
+      else if( cons->enabled )
       {
          if( enforce )
          {
